-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.1.0 Beta 1
-
None
-
837c2f18c (dev), e2f5e9b1f (tqtc/lts-6.2), ab19b7d0d (6.5)
In QAbstractItemModel reset signal documentation, role names are mentioned as a one of things that are invalidated and which should be re-queried by a model user. Qml is is not respecting that, and roles names are set only once after a first data chunk is read. As a model is free to redefine and re-use roles ids that situation may cause a security issues.
Component {
id: delegate
Text {
text: userName // after reset it may show userPass instead
}
}
- split to
-
QTBUG-111987
TableView does not update roles on updates roles names on QAbstractItemModel::reset signal
-
- Closed
-